# pyhc-repo-template

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
docs/: documentation.txt
src/my_pyhc_package/: __init__.py  main.py
tests/: test_main.py
