[project]
name = "my_pyhc_package"
version = "0.0.0"
description = "A package of awesome Python code that will transform heliophysics forever."
license = "BSD-3-Clause"
readme = "README.md"
keywords = [
    "awesome",
    "heliophysics",
    "package"
]

[project.urls]
Homepage = "https://github.com/heliophysicsPy/pyhc-repo-template"